# SCF

./: .buildinfo  .gitignore  .licenserc.yaml  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js
.github/: .licenserc.yaml  integration_testing.cmake  optional_modules.cmake  tamm_testing.cmake
_static/: documentation_options.js
background/: dft_notes.html  index.html
cmake/: mpi_test.cmake
docs/: README.md  make.bat
module_api/: AO_Restricted_Fock_Op.html  AO_Restricted_Kohn-Sham_Op.html  AO_Restricted_One-Electron_Fock_Op.html  AO_Restricted_One-Electron_Kohn-Sham_Op.html  AO_integral_driver.html  AOs_on_a_grid.html  Core_guess.html  Coulomb's_Law.html  Density2Grid.html  Density_matrix_builder.html  Determinant_driver.html  Diagonalization_Fock_update.html  Eigen_Solve.html  Eigen_Solve_via_Eigen.html  Eigen_Solve_via_Jacobi.html  Electronic_energy.html  Fock_matrix_builder.html  Four_center_J_builder.html  Four_center_K_builder.html  Gau2Grid.html  GauXC_Basis_Converter.html  GauXC_Driver.html  GauXC_Molecule_Converter.html  GauXC_Quadrature_Batches.html  GauXC_XC_Energy.html  GauXC_XC_Potential.html  Generalized_eigensolve.html  Generalized_eigensolve_via_Ball_arithmetic.html  Generalized_eigensolve_via_Eigen.html  Grid_From_File.html  LibXC_Energy.html  LibXC_Potential.html  Loop.html  Restricted_Fock_Op.html  Restricted_Kohn-Sham_Op.html  Restricted_One-Electron_Fock_Op.html  Restricted_One-Electron_Kohn-Sham_Op.html  SAD_guess.html  SCF_Driver.html  SCF_Energy.html  (+3 more)
scf_cxx_api/: annotated.html  classes.html  classscf_1_1fock__operator_1_1FockOperatorCommon-members.html  classscf_1_1fock__operator_1_1FockOperatorCommon.html  classscf_1_1fock__operator_1_1FockOperatorCommon__coll__graph.map  classscf_1_1fock__operator_1_1FockOperatorCommon__coll__graph.md5  classscf_1_1fock__operator_1_1FockOperatorCommon__inherit__graph.map  classscf_1_1fock__operator_1_1FockOperatorCommon__inherit__graph.md5  classscf_1_1fock__operator_1_1RKohnShamVisitor-members.html  classscf_1_1fock__operator_1_1RKohnShamVisitor.html  classscf_1_1fock__operator_1_1RestrictedVisitor-members.html  (+118 more)
(+268 files in other folders)
